--- a/Web Builds/Peaks & Volleys/Peaks & Volleys.html
+++ b/Web Builds/Peaks & Volleys/Peaks & Volleys.html
@@ -56,7 +56,7 @@
 						break;
 					}
 				});
-				u.initPlugin(jQuery("#unityPlayer")[0], "Super Climb CTF.unity3d");
+				u.initPlugin(jQuery("#unityPlayer")[0], "Peaks & Volleys.unity3d");
 			});
 		-->
 		</script>
@@ -128,8 +128,7 @@
 		</div>
 		<p class="footer">&laquo; created with <a href="http://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
 	</body>
-	<h1>Objective</h1>
-<p>Move one of your pieces onto the opposing side's flag.</p>
+	<p>Move one of your pieces onto the opposing side's flag.</p>
 <h1>Controls And Explanation</h1>
 <p>Every turn, you can either (move or attack) <i>or</i> ajust the state of each of your units.</p>
 <p>This is divided into two phases.</p>
